infrastructure/searxng-evaluation/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: searxng-evaluation
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng-evaluation
      app.kubernetes.io/instance: searxng-evaluation
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: searxng
            k8s:app.kubernetes.io/instance: searxng
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: searxng
            k8s:app.kubernetes.io/instance: searxng-tor
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: searxng-tor.malg.svc.cluster.local.
              - matchName: searxng.malg.svc.cluster.local.
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: searxng-evaluation-direct-ingress
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
      app.kubernetes.io/instance: searxng
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: searxng-evaluation
            k8s:app.kubernetes.io/instance: searxng-evaluation
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
